<resources>
    <string name="app_name">Text Game</string>
    <string name="welcome">Welcome to The Brub</string>
    <string name="start_game">Enter Game</string>
    <string name="quit_game">Quit Game</string>
    <string name="room_info">Room Info</string>
    <string name="player_name">Player</string>
    <string name="enemy_health">Enemy Health</string>
    <string name="enemy_name">Enemy Name</string>
    <string name="left_button">Left Button</string>
    <string name="right_button">Right Button</string>
    <string name="add_text">Add Text</string>
    <string name="filler_text">Filler Text</string>
    <string name="action">Go</string>
    <string name="back">Back</string>
    <string name="game_over">Game Over</string>

    <string-array name="main_array">
        <item>Move</item>
        <item>Look</item>
        <item>Search</item>
        <item>Inventory</item>
        <item>Attack</item>
    </string-array>

    <string-array name="room_array">
        <item>North</item>
        <item>East</item>
        <item>South</item>
        <item>West</item>
    </string-array>

    <string-array name="room_names">
        <item name="room_1">Room 1</item>
        <item name="room_2">Room 2</item>
        <item name="room_3">Room 3</item>
        <item name="room_4">Room 4</item>
        <item name="room_4a">Room 4a</item>
        <item name="room_4b">Room 4b</item>
        <item name="room_5">Room 5</item>
        <item name="room_6">Room 6</item>
        <item name="room_7">Room 7</item>
        <item name="room_7a">Room 7a</item>
        <item name="room_8">Room 8</item>
        <item name="room_9">Room 9</item>
        <item name="room_10">Room 10</item>
        <item name="room_11">End Room</item>
    </string-array>

    <string-array name="initial_text">
        <item name="room_1">You awake in a dark stone room. The floor is uneven and rough.The faint glow of a torch shoots under the door in front of you from the room to the East. You can make out the shapes of a few boxes in the corner. Distant and through the door, you hear the faint sound of footsteps. It’s time to find a way out of here.</item>
        <item name="room_2">You enter a stone room with a torch on the wall. There is another large wooden door to the South, this time with a small hole for a window near the top. To the East there are vertical iron bars in place of a wall, separating you from the next room. To the West, the door you just entered through.</item>
        <item name="room_3">You slowly open and close the door. On the opposite side of the room is another door, but you make out small heap near it. Two small shapes actually. It looks like a small creature is engorging itself on a refuse pile. You don\'t have time to envy the creature\'s bounty before it leaps at you.</item>
        <item name="room_4">As you leave the weird creature behind you find a mostly empty room lit by a single torch. It\s almost pleasant after what you just went through. A line of small crates sit on the wall across from you.</item>
        <item name="room_4a">As you step through the door your foot catches on something. Is that… a rolled up rug? No. You think it must be a body in a bag, just basing it off the stench it gives you. The room is eerily empty outside of the doorway. You shouldn\t linger here.</item>
        <item name="room_4b">You can finally stop holding your breath. You spot a small chest in the corner. It looks like it hasn\'t been touched in ages. Outside of the door behind you and a few busted crates, this room seems mostly abandoned.</item>
        <item name="room_5">You made it through your toughest challenge yet, a locked door. This rooms is blazingly bright and warm thanks to the overabundance of torches lining the walls. There\'s a door across from you, but maybe you should take time to prepare yourself. There\s no telling what lies ahead.</item>
        <item name="room_6">Maybe you should\'ve spent more time in the last room. There seems to be a huge creature in here, from what you can tell. You can tell because it\'s right in front of you, and looks angry too. There looks to only be one way out of this.</item>
        <item name="room_7">You made it through. Not by much, but you made it through. Around the floor lies a bunch of wooden planks. Maybe from crates, maybe from the thing you just got past. In the rubble lies a small brown object. It\s hard to tell what it is because the light is so dim.</item>
        <item name="room_7a">You find yourself in a room that looks almost iron. As if the entire room was chroma shifted into a nice easy gray. You find a large crate mostly intact in the center of the room. Ominious, but maybe useful?</item>
        <item name="room_8">This is probably the least interesting room yet, so more than likely your favorite. A short line of crates are sitting on the wall across from you with a single torch above them. To your West is the only other door in the room.</item>
        <item name="room_9">As you walk in the very first thing you notice is a deprecated suit of armor. Almost like something you would find in a museum. You wager that between the rust and general disposition of the set it\'s probably not usable. The shield might come in handy though.</item>
        <item name="room_10">You think you\'re getting towards the end of all of this, at least you hope. A new creature sits in the corner. As you enter it stands. It really looks like it could use a meal, and you two are the only things in the room. Good luck.</item>
        <item name="room_11">End Room</item>
    </string-array>

    <string-array name="return_text">
        <item name="room_1">You return to the original room.</item>
        <item name="room_2">You return to the room with the iron bars.</item>
        <item name="room_3">You return to the room with the dead creature, hoping what\'s there stays dead.</item>
        <item name="room_4">You return to the room with the single torch.</item>
        <item name="room_4a">You return to the room with the body, carefully tiptoeing around it.</item>
        <item name="room_4b">You return to the room with the small chest.</item>
        <item name="room_5">You return to the bright and warm room.</item>
        <item name="room_6">You return to the room with the hulking corpse, is it still breathing?</item>
        <item name="room_7">You return to the room with all the broken crates.</item>
        <item name="room_7a">You return to the iron room.</item>
        <item name="room_8">You return to the relatively boring room.</item>
        <item name="room_9">You return to the room with the suit of armor.</item>
        <item name="room_10">You return to the room with the emaciated creature, doesn\t look that appetizing.</item>
        <item name="room_11">End Room</item>
    </string-array>

    <string-array name="look_text">
        <item name="room_1">You see a pallet covered in straw in one corner, and a stack of 2 small wooden crates in the other.</item>
        <item name="room_2">As you approach the iron bars, you can see into the room to the East. There seems to be some sort of... armor? Is there a roaming knight?</item>
        <item name="room_3">You see the creature and a door across from you. A refuse pile sits under a torch.</item>
        <item name="room_4">A line of crates sit on a wall. A single torch lights the otherwise dim room. A small pile of clothes lie in the corner.</item>
        <item name="room_4a">A boys lays on the floor and the stench is almost unbearable. A couple pallets lie not too far away. You wonder if that\'s how they got it in here.</item>
        <item name="room_4b">This room is much more pleasant smelling, though that\'s not saying much. A small chest is the main focal point here, I wonder if that\'s important.</item>
        <item name="room_5">It\'s like a sauna in here. Except a lot more torches and a lot less... saunas.</item>
        <item name="room_6">You find a huge creature being in here kinda upsetting. How did it even get in here? Outside of that and some gashes in the wall, the room is relatively unremarkable.</item>
        <item name="room_7">You find to be what looks like an abandoned workshop. Some leftover planks, a tool or two, and a small brown purse in the mess.</item>
        <item name="room_7a">This room is weird. Almost looks like it\'s made out of some kind of pure iron. A large crate sits in the center with a table and chair in the corner. Was someone meant to be here?</item>
        <item name="room_8">There\'s another line of crates in this room guided by a single torch. A refreshing scene after your recent run-ins.</item>
        <item name="room_9">You found the room with the knight\'s armor, but no knight. You can see back through the iron bars, but you reason there isn\'t much point turning back now.</item>
        <item name="room_10">An emaciated figure greets you in this room, you feel uneasy. But determined to face this final challenge.</item>
        <item name="room_11">End Room</item>
    </string-array>
</resources>