<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.group.textgame.fragments.MainScreenFragment"
    android:orientation="vertical">

    <GridLayout
        android:id="@+id/topInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_name"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <ProgressBar
                android:id="@+id/playerHealthBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:progress="0"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/green" />
        </LinearLayout>

        <TextView
            android:id="@+id/room_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="end"
            android:text="@string/room_info"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </GridLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ScrollView
            android:id="@+id/text_scroller"
            android:layout_width="fill_parent"
            android:layout_height="505dp"
            android:layout_gravity="bottom"
            android:background="@color/white"
            android:clipToPadding="true"
            android:fillViewport="false"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:visibility="visible"
            android:fadeScrollbars="false">

            <TextView
                android:id="@+id/text_box"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </ScrollView>

        <LinearLayout
            android:id="@+id/enemy_overlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_vertical"
            android:background="@color/black"
            android:orientation="vertical"
            android:visibility="invisible">

            <TextView
                android:id="@+id/enemy_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enemy_name"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <ProgressBar
                android:id="@+id/enemyHealthBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:progress="0"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/red" />
        </LinearLayout>

    </FrameLayout>



    <GridLayout
        android:id="@+id/bottomColumns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/left_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/left_button"
            android:scaleType="center"
            android:src="@drawable/left_arrow" />

        <TextView
            android:id="@+id/action_label"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:text="@string/filler_text"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/right_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/right_button"
            android:src="@drawable/right_arrow" />
    </GridLayout>

    <GridLayout
        android:id="@+id/buttonHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:backgroundTint="@color/black">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:text="@string/back"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:text="@string/action"
            android:textColor="@color/black" />
    </GridLayout>

</LinearLayout>